--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev -H 0.0.0.0 --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "js": "json-server --watch ./src/db/products.json --port 3001 --host 0.0.0.0"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.74.0",
@@ -19,6 +21,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
