--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.74.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -43,6 +44,7 @@
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-swipeable": "^7.0.2",
+    "redis": "^5.5.6",
     "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
