--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.74.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^1.1.1",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +40,7 @@
     "lucide-react": "^0.487.0",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
+    "next-seo": "^6.8.0",
     "next-themes": "^0.4.6",
     "pg": "^8.15.6",
     "react": "^19.0.0",
