--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "js": "json-server --watch ./src/db/products.json --port 3001 --host 0.0.0.0",
-    "test": "jest"
+    "test": "jest",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.8",
@@ -41,6 +42,7 @@
     "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-seo": "^6.8.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "pg": "^8.15.6",
     "react": "^19.0.0",
