Local mode + makefile (#6)
* Local mode + makefile

Local mode (.env variables, database, payment, emails)
makefile + npm scripts
Relevant dump.sql for init of db

* Fix eslint-disable

* Fix .env.staging absence

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "env-cmd -f .env.local next dev -H 0.0.0.0 --turbopack",
+    "dev:staging": "env-cmd -f .env.staging next dev -H 0.0.0.0 --turbopack",
+    "build": "if [ -f .env.staging ]; then env-cmd -f .env.staging next build; else next build; fi",
+    "start": "env-cmd -f .env.staging next start",
     "lint": "next lint",
     "js": "json-server --watch ./src/db/products.json --port 3001 --host 0.0.0.0",
     "test": "jest",
@@ -70,6 +71,7 @@
     "@types/react-dom": "^19",
     "@types/react-input-mask": "^3.0.6",
     "@types/supertest": "^6.0.3",
+    "env-cmd": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "jest": "^29.7.0",
